--- a/src/main/resources/webapp/orders/_edit.html
+++ b/src/main/resources/webapp/orders/_edit.html
@@ -69,7 +69,7 @@
   </div>
 </script>
 
-<script src="/seedapp/vendor/jquery.serialize-object.min.js"></script>
+<script src="/conferencer/vendor/jquery.serialize-object.min.js"></script>
 
 <script type="text/javascript">
 
