--- a/src/main/resources/webapp/products/_edit.html
+++ b/src/main/resources/webapp/products/_edit.html
@@ -21,7 +21,7 @@
   </script>
 </form>
 
-<script src="/seedapp/vendor/jquery.serialize-object.min.js"></script>
+<script src="/conferencer/vendor/jquery.serialize-object.min.js"></script>
 <script type="text/javascript">
 $(function() {
   console.log("order_edit.html");
