--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -18,6 +18,7 @@
       <ul class="right">
         <li class="active"><a href="#orders">Orders</a></li>
         <li><a href="#products">Products</a></li>
+        <li><a href="#profile">My page</a></li>
         <li><a href="#">About</a></li>
       </ul>
     </section>
@@ -63,7 +64,7 @@ $(function() {
     displayCurrentLocation();
 
     $('#notifications').on('click', '.notify', function() {
-      $(this).fadeOut(350, function() {
+      $(this).slideUp(350, function() {
         $(this).remove();
       });
     });
