--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -6,9 +6,11 @@
   <link rel="stylesheet" href="style/normalize.css">
   <link rel="stylesheet" href="style/foundation.css">
   <script src="vendor/modernizr.js"></script>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
+  <div id="loading-overlay"></div>
+
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name"><h1><a href="">Webshop</a></h1></li>
@@ -28,6 +30,7 @@
     <div class="large-12 columns">
       <section id="notifications">
       </section>
+      
   
       <section id="content">
         Loading contents...
@@ -47,10 +50,12 @@
 
 
 </body>
-<script src="/conferencer/vendor/jquery.js"></script>
+<script src="vendor/jquery.js"></script>
+<script src="vendor/jquery.serialize-object.min.js"></script>
 <script src="vendor/foundation.min.js"></script>
-<script src="/conferencer/vendor/handlebars.min.js"></script>
-<script src="/conferencer/js/conferencer.js"></script>
+<script src="vendor/handlebars.min.js"></script>
+
+<script src="js/conferencer.js"></script>
 <script type="text/javascript">
 var loadingTemplate = Handlebars.compile($("#loading-template").html());
 
@@ -80,7 +85,7 @@ var currentId = function() {
 }
 
 var displayCurrentLocation = function() {
-  $("#notifications .notify").fadeOut().empty();
+  //$("#notifications .notify").fadeOut().empty();
   $("#content").html(loadingTemplate());
 
   var parts = window.location.hash.substring(1).split(/\//);
