Added event collaborators
* Mixed up URL routing order

--- a/src/main/resources/webapp/events/_new.html
+++ b/src/main/resources/webapp/events/_new.html
@@ -9,6 +9,11 @@
     </label>
   </div>
   <div>
+    <label>Event link name: (one word)
+ 	   <input type="text" name="event[slug]" required placeholder="slug" maxlength="20" />
+    </label>
+  </div>
+  <div>
     <label>
 	    <input type="checkbox" name="event[isPublic]" />
     	Public
