--- a/src/main/resources/webapp/products/_edit.html
+++ b/src/main/resources/webapp/products/_edit.html
@@ -25,9 +25,8 @@
 $(function() {
   var productFormTemplate = Handlebars.compile($("#productFormTemplate").html());
   
-  var parts = window.location.hash.substring(1).split(/\//);
-  if (parts[2] && parts[2].match(/\d+/)) {
-    productRepository.get(parts[2]).then(function (product) {
+  if (currentId()) {
+    productRepository.get(currentId()).then(function (product) {
       $("#productForm").html(productFormTemplate(product));
     });
   } else {
