--- a/src/main/resources/webapp/products/_list.html
+++ b/src/main/resources/webapp/products/_list.html
@@ -23,11 +23,11 @@
 
     $("#products").on("click", "a", function(e) {
       e.preventDefault();
-      window.location.hash = "products/edit/" + $(e.target).data("product");
+      window.location.hash = "products/" + $(e.target).data("product") + "/edit";
     });
 
     $("#addProduct").click(function() {
-      window.location.hash = "products/edit/new";
+      window.location.hash = "products/new/edit";
     });
   });
 </script>
