--- a/src/main/resources/webapp/products/index.html
+++ b/src/main/resources/webapp/products/index.html
@@ -1,10 +1,33 @@
 <h2>Products</h2>
 
-<script>
-$(function() {
-    if (!window.location.hash || window.location.hash === "#products" || window.location.hash === "#products/") {
-        window.location.hash = "products/list";
-    }
-    displayCurrentLocation();
-});
+<div id="products">
+  Loading products...
+</div>
+
+<button id="addProduct">Add new product</button>
+
+<script type="text/x-handlebars-template" id="productTemplate">
+  <ul>
+    {{#each .}}
+    <li>Product: <a href="#" data-product="{{ id }}">{{ title }}</a></li>
+    {{/each}}
+  </ul>
+</script>
+<script type="text/javascript">
+  var productTemplate = Handlebars.compile($("#productTemplate").html());
+
+  $(function() {
+    productRepository.list().then(function(data) {
+      $("#products").html(productTemplate(data.products));
+    });
+
+    $("#products").on("click", "a", function(e) {
+      e.preventDefault();
+      window.location.hash = "products/" + $(e.target).data("product") + "/edit";
+    });
+
+    $("#addProduct").click(function() {
+      window.location.hash = "products/new/edit";
+    });
+  });
 </script>
