Add topics to talks

--- a/src/main/resources/webapp/events/_show.html
+++ b/src/main/resources/webapp/events/_show.html
@@ -15,7 +15,7 @@
   <ul id="event_topics">
     {{#each topics}}
       <li class="event_topic">
-		{{title}}
+		{{title}} (talk count: {{talk_count}})
       </li>
     {{/each}}
   </ul>
