--- a/src/main/resources/webapp/events/_show.html
+++ b/src/main/resources/webapp/events/_show.html
@@ -26,7 +26,7 @@
   <ul id="event_talks">
     {{#each .}}
       <li class="event_talk">
-		{{title}}
+		<a href="#events/{{@root.event.slug}}/talks/{{id}}">{{title}}</a>
       </li>
     {{/each}}
   </ul>
