--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -72,6 +72,16 @@ $(function() {
     });
 });
 
+var currentIds = function() {
+  var parts = window.location.hash.substring(1).split(/\//);
+  var ids = [];
+  for (var i=1; i<parts.length; i += 2) {
+    ids.push( (parts[i][0] == '_') ? null : parts[i]);
+  }
+  return ids;
+}
+
+
 var currentId = function() {
   var parts = window.location.hash.substring(1).split(/\//);
   if (parts[1] && !parts[1][0] != '_new') {
@@ -81,15 +91,27 @@ var currentId = function() {
   }
 }
 
-var displayCurrentLocation = function() {
+var displayCurrentLocation = function(event) {
+  if (event) {
+    if (window.location.hash.startsWith("#./")) {
+      var oldHash = event.originalEvent.oldURL.split('#')[1];
+      window.location.hash = oldHash + window.location.hash.substring(2);
+      return;
+    }
+  }
   //$("#notifications .notify").fadeOut().empty();
   $("#content").html(loadingTemplate());
 
   var parts = window.location.hash.substring(1).split(/\//);
 
   var partial = "/conferencer/" + parts[0] + "/";
-  if (parts[3]) {
+  
+  if (parts[4]) {
+    partial += parts[2] + "/_" + parts[4] + ".html";
+  } else if (parts[3] && parts[3][0] === "_") {
     partial += parts[2] + "/" + parts[3] + ".html";
+  } else if (parts[3]) {
+    partial += parts[2] + "/_show.html";
   } else if (parts[2]) {
     partial += ("_" + parts[2] + ".html");
   } else if (parts[1] && parts[1][0] === "_") {
